@@ -1,2 +1,5 @@
+[master]
+py-version=3.10
+
 [testoptions]
 min_pyver=3.10
